  * DVB Subtitles: fixed flashing, repeating subs, fix sync & timeouts
  * DVB EPG: fixed incorrectly parsed running status, clear old epg data, cropped epg texts
  * updated included libdvdnav: more graceful handling of some error conditions;
    fixed playback of some strangely authored DVDs
  * fixed problem with first subtitle not showing when using separate subtitle files

xine-lib (1-rc8)
  * Multiple security vulnerabilities fixed on PNM and Real RTSP clients
  * Rewrote OpenGL output plugin.
  * Fixed segfault when seeking with the "xvmc" and "xxmc" plugins playing 
    files with IDCT / mocomp XvMC acceleration. 
  * polypaudio sound server support
  * fixed playback of MMS streams with the new input cache layer [bug #1066926]
  * fixed builds without X11 [bug #1067705]
  * added support for 24-bit LPCM from DVDs [bug #843786]
  * Fixed segfault in xxmc plugin when switch from software decoding to 
    accelerated decoding occured while software surfaces still needed to be 
    duplicated.
  * fixed plugin catalog cache (faster xine startup)
  * updated internal goom to 2k4-dev21; randomized and improved look of 
    initial effect (hopefully no more white screens any more)
  * DVB: Fixed pat parsing with fullfeatured cards.
  * DVB: Now uses auto-inversion if the frontend supports it - should solve many tuning
    problems for people with sat cards.  
  * DVB: Will now verify that channels.conf file is in correct (?zap) format.
  * fixed OSS mixer disabling itself after first playlist entry
  * improved overlay blending quality, fixed subtitles with XShm
  * improved support for transport streams
  * new plugin for DVB subtitles
  * support realplayer codecs on AMD64
  * fixed restoring xv settings on exit for some frontends
  * UTF-8 support for cddb (freedb) client
  * identify AAC, MPEG4 and H264 on transport streams
  * build fixes and improvements (not using mkinstalldirs, mingw32)
  * fixed mmst and mmsh issues with the cache plugin